# Reserva

./: .gitattributes  .gitignore  README.md  all.json  test.json  test.puml  test.yaml
.devcontainer/: devcontainer.json  dockerfile
.github/.workflows/: build-frontend.yaml
.github/workflows/: build-api.yaml  frontend-test.yaml  openapi-validation.yaml
api/: all.json  conventions.md  create_all_routes.py  create_all_schemas.py  create_bundle.sh  requirements.txt
api/routes/: all.yaml
api/schemas/: Authorization.yaml  Availability.yaml  Booking.yaml  BooleanFeature.yaml  Group.yaml  Hour.yaml  Room.yaml  Student.yaml  UsernamePasswordPair.yaml  _all.yaml  _index.yaml  create_all_schemas.py
api/security/: _all.yaml  security.yaml
api/service_routes/: _all.yaml  authentication.yaml  booking.yaml  create_all_routes.py  credit.yaml  frontend-server.yaml  group-management.yaml  group.yaml  item.yaml  login.yaml  room-booking.yaml  room-management.yaml  room-search.yaml  schedule.yaml  (+2 more)
microservices/: compose.yaml  localhost_compose.yaml
microservices/user/: openapi.yaml  setup.cfg
microservices/user/.openapi-generator/: FILES
microservices/user/src/openapi_server/: main.py
microservices/user/src/openapi_server/apis/: default_api.py
microservices/user/src/openapi_server/models/: group_membership.py  group_membership_all_of.py  group_membership_all_of1.py  new_user.py  new_user_all_of.py  update_user.py  user.py  user_all_of.py  users_user_id_groups_get200_response.py
microservices/user/tests/: test_default_api.py
reversa-react-frontend/: package.json
(+400 files in other folders)
