[metadata]
name = openapi_server
version = 0.0.1
description = This API manages user authentication, authorization, and admin management.
long_description = file: README.md
keywords = OpenAPI User Service API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
